# fplassistant

./: .gitignore  Makefile  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup_and_run.py
backend/alembic/: env.py
backend/app/: main.py  models.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  database.py  init_db.py  session.py
backend/app/models/: ep.py  fixture.py  player.py  team.py  user.py
backend/app/routers/: admin.py  ep.py  fixtures.py  optimize.py  players.py  telegram.py
backend/app/schemas/: user.py
backend/app/services/: ep_calculator.py  odds_provider.py  scheduler.py  sportmonks_provider.py  telegram_bot.py
backend/app/services/data/: fpl_client.py
backend/cache/: understat_Bundesliga_2023.json  understat_Bundesliga_2024.json  understat_EPL_2024.json  understat_La_Liga_2023.json  understat_La_Liga_2024.json  understat_Ligue_1_2023.json  understat_Ligue_1_2024.json  understat_Serie_A_2023.json  understat_Serie_A_2024.json
backend/scripts/: __init__.py  add_sportmonks_data_fixed.py  asd.py  bootstrap_upsert.py  export_unmapped_understat.py  ingest_all_data.py  ingest_fbref_league_seasons.py  ingest_fbref_seasons.py  ingest_understat_seasons.py  load_fixtures.py  load_player_history.py  load_player_history_vaastav.py  map_fbref_ids.py  map_understat_ids.py  patch_unmapped_priors.py  simple_fpl_ingest.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  (+1 more)
infra/: .env.example  docker-compose.yml  unmapped_understat.csv
(+16 files in other folders)
