[tool.poetry]
name = "fpl-ai-backend"
version = "0.1.0"
description = "Backend for FPL AI"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlmodel = "^0.0.16"
psycopg = { extras = ["binary"], version = "^3.1.18" }
alembic = "^1.13.1"
pydantic-settings = "^2.3.0"
python-telegram-bot = "^21.0"
apscheduler = "^3.10.4"
pandas = "^2.2.2"
orjson = "^3.10.0"
loguru = "^0.7.2"
ortools = "^9.10.4067"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.5.5"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
